# minitorch-module-1-tristanrussell2000

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
minitorch/: autodiff.py  module.py  operators.py  scalar.py  scalar_functions.py
tests/: test_operators.py
